--- a/recoder/package.json
+++ b/recoder/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "next": "16.1.6",
+    "prismjs": "^1.30.0",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-simple-code-editor": "^0.14.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
